--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,12 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.plugin.serialization'
 }
 
 android {
     namespace 'com.sirdave.videostreamapp'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.sirdave.videostreamapp"
@@ -37,7 +38,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.2.0'
+        kotlinCompilerExtensionVersion '1.5.0'
     }
     packagingOptions {
         resources {
@@ -70,8 +71,8 @@ dependencies {
     implementation "io.insert-koin:koin-androidx-compose:$koin_version"
 
     def stream_version = "0.5.8"
-    implementation "io.getstream:stream-video-android-core$stream_version"
-    implementation "io.getstream:stream-video-android-ui-compose$stream_version"
+    implementation "io.getstream:stream-video-android-core:$stream_version"
+    implementation "io.getstream:stream-video-android-ui-compose:$stream_version"
 
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3"
 }
